K8S/final_workshop/01-spring-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: springservice
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 80
  selector:
    app: spring
    type: ui
