K8S/final_workshop/03-spring-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springui
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: spring-ui.jb
    http:
      paths:
      - path: /
        backend:
          serviceName: springservice
          servicePort: http
